--- a/styles/calendar.css
+++ b/styles/calendar.css
@@ -1,12 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap');
 
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: 'Poppins', sans-serif;
-}
-
 button {
     border: none;
     outline: none;
@@ -17,11 +10,10 @@ button {
 
 body {
     user-select: none;
+    font-family: Arial, sans-serif; /* Body 기본 설정 */
+    background-color: #f9f9f9; /* Body 기본 설정 */
     display: flex;
     flex-direction: column; /* 세로 방향으로 배치 */
-    min-height: 100vh;
-    margin: 0; /* 기본 여백 제거 */
-    border: solid 1px #008aff; /* 바깥 테두리 */
 }
 
 .wrapper {
@@ -29,7 +21,6 @@ body {
     flex-grow: 1; /* 남은 공간을 차지하도록 설정 */
     background: #fff;
     border-radius: 10px;
-    padding: 25px;
 }
 
 .calendar {
@@ -123,7 +114,8 @@ body {
 }
 
 .days li.today {
-    color: #0004ff;
+    color: #00b7ff;
+    font-weight: bold;
 }
 
 .selected-range {
@@ -150,7 +142,7 @@ body {
     color: rgb(69, 69, 69); 
 }
 
-.day-description:focus {
+.day-description:focus { /*이거 뭔데*/
     border-color: #008aff;
 }
 
@@ -158,5 +150,5 @@ body {
 /* main태그 스타일 지정해줌 */
 main {
     display: flex; /* 네비게이션과 달력을 가로로 나란히 배치 */
-    /*flex-grow: 1; /* 남은 공간을 차지하도록 설정 -> 이거 실행하면 footer가 바닥으로 붙어서 여백*/ 
+    flex-grow: 1; /* 남은 공간을 차지하도록 설정 -> 이거 실행하면 footer가 바닥으로 붙어서 여백*/ 
 }
