--- a/styles/navigation.css
+++ b/styles/navigation.css
@@ -1,20 +1,14 @@
-/* styles/styles.css */
-
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
 aside {
     width: 330px;
-    background-color: #fff;
-    padding: 20px;
-    border-right: 2px solid #ddd;
+    background-color: #ffffff;
+    padding-top: 50px;
+    border-right: 4px solid #ccc;
     text-align: center;
+    height: 100%;
 }
 aside img {
-    width: 150px;
-    height: 150px;
+    width: 50%;
+    height: 50%;
     border-radius: 50%;
     object-fit: cover;
     border: 2px solid #ddd;
@@ -24,29 +18,29 @@ aside .info {
     margin-bottom: 40px;
 }
 aside .info .nickname {
-    font-size: 20px;
+    font-size: 30px;
     font-weight: bold;
     color: #333;
+    padding-bottom: 5px;
 }
 aside .info .description {
-    font-size: 18px;
-    color: #555;
-}
-aside .menu {
-    margin-top: 20px;
-    text-align: center;
-    border-top: 1px solid #ddd;
-    padding-top: 15px;
-}
-aside .menu a {
-    display: block;
-    padding: 40px 0;
     font-size: 20px;
     color: #555;
-    text-decoration: none;
-    border-bottom: 1px solid #ddd;
 }
+
+aside .menu a {
+    display: block;
+    padding: 40px;
+    font-size: 20px;
+    font-weight: bold;
+    color: #555;
+    text-decoration: none;
+    border-top: 3px solid #ccc;
+    transition: background-color 0.3s, color 0.3s;
+}
+
 aside .menu a:hover {
-    color: #007bff;
+    background-color: #007bff;
+    color: white;
     font-weight: bold;
 }
