--- a/styles/header.css
+++ b/styles/header.css
@@ -6,7 +6,7 @@ header {
     align-items: center;
     border-bottom: 2px solid #ddd;
 }
-header .date {
+.date {
     font-size: 40px;
     font-weight: bold;
     color: #555;
