--- a/styles/navigation.css
+++ b/styles/navigation.css
@@ -1,3 +1,8 @@
+.container{
+    background-color: #ffffff;
+    border-right: 4px solid #ccc;
+    height: 100%;
+}
 aside {
     width: 330px;
     background-color: #ffffff;
@@ -7,8 +12,8 @@ aside {
     height: 100%;
 }
 aside img {
-    width: 50%;
-    height: 50%;
+    width: 300px;
+    height: 300px;
     border-radius: 50%;
     object-fit: cover;
     border: 2px solid #ddd;
