--- a/styles/header.css
+++ b/styles/header.css
@@ -1,13 +1,13 @@
 header {
     background-color: #f9f9f9;
-    padding: 10px 20px;
+    padding-right: 3cqw;
     display: flex;
     justify-content: space-between;
     align-items: center;
     border-bottom: 2px solid #ddd;
 }
 .date {
-    font-size: 40px;
+    font-size:30px;
     font-weight: bold;
     color: #555;
 }
