--- a/styles/addSchedule.css
+++ b/styles/addSchedule.css
@@ -16,7 +16,7 @@ h1 {
 }
 
 .addSchedule {
-    width: 100%;
+    width: 40%;
     display: flex;
     flex-direction: row;
     padding: 15px;
@@ -24,18 +24,12 @@ h1 {
     border-radius: 5px;
 }
 
-.addSchedule > * {
-    flex: 1; /* 남는 공간을 모두 차지하도록 설정 */
-    margin: 5px; /* 요소 간의 여백 */
-}
-
 .schedule-column-1 {
-    flex: 0 0 35%; /* 40% 너비 */
+    width: 100%;
     margin-right: 10px; /* 오른쪽 여백 */
 }
 
 .schedule-column-2 {
-    flex: 0 0 65%; /* 60% 너비 */
     background-color: #dfedf5; 
     border-radius: 5px;
     padding: 2%
@@ -43,6 +37,7 @@ h1 {
 
 .input-group {
     margin-bottom: 4%;
+    width: 100%;
 }
 
 .input-group label {
@@ -71,6 +66,10 @@ input[type="number"] {
     font-size: 14px; /* 글자 크기 줄임 */
 }
 
+.timetableList {
+    width: 60%;
+    padding: 15px;
+}
 
 .schedule-container {
     display: flex; /* Flexbox 사용 */
